<resources>
    <string name="app_name">MedHub</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="feedback">We want to know what you thought of your experience at MedHub.So we do love to hear your feedback . </string>
    <string name="fname">First Name - Required</string>
    <string name="lname">Last Name - Required</string>
    <string name="hname">Hospital Name - Required</string>
    <string name="nic">NIC - Required</string>
    <string name="email">Email - Required</string>
    <string name="contact_no">Phone Number - Required</string>
    <string name="address">Address - Required</string>
    <string name="verification">Registration Number - Required</string>
    <string name="password">Password</string>
    <string name="con_password">Confirm Password</string>
    <string name="sign_up">  Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="verify">Verify</string>
    <string name="personal_info">Personal Info</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="patientname">Patient Name- Required</string>
    <string name="adress_patient">Address- Required</string>
    <string name="phonenumber">PhoneNumber - Required</string>
    <string name="NIC">NIC- Required</string>
    <string name="CardType">Card Type-Required</string>
    <string name="Cardnum">Card Number- Required</string>
    <string name="Nameoncard">Name on Card- Required</string>
    <string name="CVC">XXX</string>
    <string name="age">Age*</string>
    <string name="Expdate">MM/YYYY</string>
    <string name="PayNow">Pay Now</string>
    <string name="Gender">Gender</string>
    <string name="delete">DELETE</string>
    <string name="save">SAVE</string>
    <string name="cancel">BACK</string>
    <string name="search">SEARCH</string>


</resources>