<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/drawer_pr"
    tools:context=".PatientRegister">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/app_bar"/>
    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:id="@+id/Navigation_view_pr"
        android:layout_gravity="start"
        android:background="#0e66b9"
        app:itemTextColor="@color/white"
        app:headerLayout="@layout/header_navigation"
        app:menu="@menu/main_menu_visitors"
        app:itemHorizontalPadding="40dp"
        app:itemIconTint="@color/white"
        app:itemBackground="@drawable/menu_item_padding"
        app:itemTextAppearance="@style/TextViewStyle"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginBottom="?attr/actionBarSize">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="70dp"
            android:orientation="horizontal"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="0dp"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">


                <EditText
                    android:id="@+id/First_name"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/input_bg"
                    android:drawableLeft="@drawable/person"
                    android:drawablePadding="10dp"
                    android:hint="@string/fname"
                    android:paddingLeft="10dp"
                    android:textSize="16dp" />


                <EditText
                    android:id="@+id/Last_name"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/input_bg"
                    android:drawableLeft="@drawable/person"
                    android:drawablePadding="10dp"
                    android:hint="@string/lname"
                    android:paddingLeft="10dp"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/Nic"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/input_bg"
                    android:drawableLeft="@drawable/security"
                    android:drawablePadding="10dp"
                    android:hint="@string/nic"
                    android:paddingLeft="10dp"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/Patient_Email"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/input_bg"
                    android:drawableLeft="@drawable/email"
                    android:drawablePadding="10dp"
                    android:hint="@string/email"
                    android:paddingLeft="10dp"
                    android:textSize="16dp" />


                <EditText
                    android:id="@+id/Patient_Contact"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/input_bg"
                    android:drawableLeft="@drawable/phone_android"
                    android:drawablePadding="10dp"
                    android:hint="@string/contact_no"
                    android:inputType="number"
                    android:paddingLeft="10dp"
                    android:textSize="16dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="310dp"
                android:layout_marginRight="0dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/Date"
                    style="?android:spinnerStyle"
                    android:layout_width="145dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:onClick="datepicker"
                    android:paddingLeft="5dp"
                    android:text="01-Jan-2021"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

                <Spinner
                    android:id="@+id/Gender"
                    android:layout_width="130dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"
                    android:paddingLeft="5dp"
                    android:textSize="16dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="370dp"
                android:orientation="vertical"
                android:paddingLeft="10dp">


                <EditText
                    android:id="@+id/Patient_Pwd"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/input_bg"
                    android:drawableLeft="@drawable/lock"
                    android:drawablePadding="10dp"
                    android:hint="@string/password"
                    android:paddingLeft="10dp"
                    android:textSize="16dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:textSize="14dp"
                    android:layout_marginLeft="20dp"
                    android:text="must enter 6 characters"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/Patient_Cpwd"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/input_bg"
                    android:drawableLeft="@drawable/lock"
                    android:drawablePadding="10dp"
                    android:hint="@string/con_password"
                    android:paddingLeft="10dp"
                    android:textSize="16dp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="520dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginRight="25dp"
                android:layout_marginLeft="25dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:text="Already Have an account?"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/Patient_register_to_sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/sign_in"
                    android:textColor="@color/attention"
                    android:textSize="18dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="580dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/profile_home"
                    android:layout_width="150dp"
                    android:layout_height="45dp"
                    android:text="@string/back"
                    android:textSize="18dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/button_back_bg"
                    android:gravity="center"
                    android:textColor="@color/attention"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/Register_to_profile"
                    android:layout_width="150dp"
                    android:layout_height="45dp"
                    android:text="@string/sign_up"
                    android:textSize="18dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/button_save_bg"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>
            </LinearLayout>


        </RelativeLayout>


    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="680dp"
        android:orientation="horizontal">

        <include layout="@layout/bottom_bar"/>
    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>