<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewone"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/user"
    android:orientation="vertical"
    tools:context=".AddInfo_Payment">


    <include
        layout="@layout/app_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="327dp" />


    <EditText
        android:id="@+id/patientFullName"
        android:layout_width="356dp"
        android:layout_height="42dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="121dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="568dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/person"
        android:hint="@string/patientname"
        android:paddingLeft="10dp"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="356dp"
        android:layout_height="42dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="176dp"
        android:layout_marginEnd="13dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/phone"
        android:gravity="center|left"
        android:hint="@string/phonenumber"
        android:paddingLeft="10dp"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/NIC"
        android:layout_width="356dp"
        android:layout_height="42dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="232dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="457dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/security"
        android:gravity="center|left"
        android:hint="@string/NIC"
        android:paddingLeft="10dp"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="62dp"
        android:layout_height="33dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="292dp"
        android:layout_marginEnd="321dp"
        android:layout_marginBottom="406dp"
        android:gravity="center"
        android:text="Age"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/txtExpDate"
        android:layout_width="121dp"
        android:layout_height="39dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="496dp"
        android:layout_marginEnd="254dp"
        android:layout_marginBottom="196dp"
        android:gravity="center"
        android:text="Exp Date"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtCVC"
        android:layout_width="60dp"
        android:layout_height="32dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="249dp"
        android:layout_marginTop="502dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="196dp"
        android:gravity="center"
        android:text="CVC"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/patientAge"
        android:layout_width="69dp"
        android:layout_height="39dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="108dp"
        android:layout_marginTop="290dp"
        android:layout_marginEnd="236dp"
        android:layout_marginBottom="409dp"
        android:background="@drawable/input_bg"
        android:gravity="center|left"
        android:hint="@string/age"
        android:paddingLeft="10dp"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/cardtype"
        android:layout_width="356dp"
        android:layout_height="42dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="344dp"
        android:layout_marginBottom="345dp"
        android:background="@drawable/input_bg"
        android:gravity="center|left"
        android:hint="@string/CardType"
        android:paddingLeft="10dp"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/cardnumber"
        android:layout_width="356dp"
        android:layout_height="42dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="394dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="295dp"
        android:background="@drawable/input_bg"
        android:gravity=""
        android:hint="@string/Cardnum"
        android:paddingLeft="10dp"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/nameoncard"
        android:layout_width="356dp"
        android:layout_height="42dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="445dp"
        android:layout_marginBottom="244dp"
        android:background="@drawable/input_bg"
        android:gravity="center|left"
        android:hint="@string/Nameoncard"
        android:paddingLeft="10dp"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <EditText
        android:id="@+id/expdate"
        android:layout_width="115dp"
        android:layout_height="42dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="42dp"
        android:layout_marginTop="535dp"
        android:layout_marginEnd="254dp"
        android:layout_marginBottom="154dp"
        android:background="@drawable/input_bg"
        android:gravity="center|left"
        android:hint="@string/Expdate"
        android:paddingLeft="10dp"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/CVC"
        android:layout_width="89dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="240dp"
        android:layout_marginTop="535dp"
        android:layout_marginBottom="156dp"
        android:background="@drawable/input_bg"
        android:gravity="center|left"
        android:hint="@string/CVC"
        android:paddingLeft="10dp"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Cancel"
        android:layout_width="113dp"
        android:layout_height="57dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="603dp"
        android:layout_marginEnd="236dp"
        android:layout_marginBottom="71dp"
        android:backgroundTint="#FFFFFF"
        android:outlineProvider="none"
        android:text="Cancel"
        android:textColor="#E63131"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Pay"
        android:layout_width="113dp"
        android:layout_height="57dp"
        android:layout_marginStart="226dp"
        android:layout_marginTop="603dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="71dp"
        android:backgroundTint="#E63131"
        android:gravity="center|left"
        android:text="Pay Now"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="420dp"
        android:layout_height="49dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/input_bg"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/view_app_to_home"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:src="@drawable/home_bottom" />

        <ImageView
            android:id="@+id/view_app_to_pat_prof"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:src="@drawable/person_bottom" />

        <ImageView
            android:id="@+id/view_app_to_make_app"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:src="@drawable/make_appointment" />

        <ImageView
            android:id="@+id/view_app"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:src="@drawable/event_available_bottom" />

        <ImageView
            android:id="@+id/view_app_logout"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:src="@drawable/login_bottom" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>


